<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/recycler_height"
    android:orientation="horizontal"
    android:background="@color/menuColor"
    android:foreground="?attr/selectableItemBackground">

    <ImageView
        android:id="@+id/track_image"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/image_padding_left"
        android:layout_marginVertical="@dimen/image_padding_top_bottom"
        android:scaleType="fitCenter"
        android:src="@drawable/placeholder" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/track_layout_marginLeft"
        android:layout_marginRight="@dimen/track_layout_marginRight">

        <TextView
            android:id="@+id/track_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="bottom|left"
            android:text="@string/track_name"
            android:textColor="@color/track_name_color"
            android:textSize="@dimen/tiny_text_size"
            android:ellipsize="end"
            android:maxLines="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/artist_name"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/artist_name_height"
                android:gravity="top|left"
                android:text="@string/artist_name"
                android:textColor="@color/artist_name_color"
                android:fontFamily="@font/ys_display_regular"
                android:textSize="@dimen/super_tiny_text_size"
                android:ellipsize="end"
                android:maxLines="1"
                android:maxEms="19"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/artist_name_height"
                android:paddingHorizontal="@dimen/info_dot_padding"
                android:src="@drawable/dot"
                app:tint="@color/dot_color"/>

            <TextView
                android:id="@+id/track_time"
                android:layout_width="match_parent"
                android:layout_height="@dimen/artist_name_height"
                android:gravity="top|left"
                android:text="@string/track_time"
                android:textColor="@color/track_time_color"
                android:fontFamily="@font/ys_display_regular"
                android:textSize="@dimen/super_tiny_text_size"
                android:maxLines="1"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/inter_button_margin_right"
            android:layout_marginTop="@dimen/inter_button_margin_top"
            android:background="@color/menuColor"
            android:src="@drawable/arrow_next"
            app:tint="@color/arrowNextColor" />

    </LinearLayout>
</FrameLayout>