<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menuColor"
    tools:context="com.practicum.playlistmaker.search.ui.SearchFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp4">

        <TextView
            style="@style/menu_head_text_style"
            android:text="@string/button_search"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/search_edit_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_search_height"
            android:layout_marginHorizontal="@dimen/search_edit_margin_horizontal"
            android:layout_marginVertical="@dimen/search_edit_margin_vertical"
            android:background="@drawable/rounded_edittext"
            android:drawableStart="@drawable/search_tiny"
            android:drawableTint="@color/editIconColor"
            android:fontFamily="@font/ys_display_regular"
            android:paddingHorizontal="@dimen/edit_text_padding"
            android:hint="@string/button_search"
            android:textColorHint="@color/editHintColor"
            android:drawablePadding="@dimen/edit_text_padding"
            android:textColor="@color/edit_text_color"
            android:textSize="@dimen/tiny_text_size"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/color_cursor"/>

        <ImageButton
            android:id="@+id/search_clear_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginHorizontal="@dimen/text_padding"
            android:src="@drawable/clear_button"
            app:tint="@color/clear_button_color"
            android:backgroundTint="@color/edit_color"
            android:foreground="?attr/selectableItemBackground"
            android:visibility="invisible"/>

    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/search_results_recycler"
            android:layout_marginTop="@dimen/recycler_margin_top"/>

        <ImageView
            android:id="@+id/placeholder_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/not_found"
            android:layout_marginTop="@dimen/not_found_pic_margin_top"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/placeholder_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/track_not_found"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="@dimen/not_found_text_size"
            android:layout_marginTop="@dimen/not_found_margin_top"
            android:layout_marginHorizontal="@dimen/not_found_margin_horizontal"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/not_found_text_color"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/search_renew_button"
            style="@style/clear_history_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/not_found_renew_button_margin_top"
            android:text="@string/renew"
            android:letterSpacing="@integer/letter_spacing"
            android:backgroundTint="@color/not_found_renew_button_color"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/not_found_renew_button_text_color"
            android:textSize="@dimen/not_found_renew_button_text_size"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/you_found_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:paddingTop="@dimen/history_padding_top"
                android:paddingBottom="@dimen/history_padding_bottom"
                android:textSize="@dimen/not_found_text_size"
                android:fontFamily="@font/ys_display_medium"
                android:textColor="@color/menu_items_text_color"
                android:visibility="invisible"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_recycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/history_recycler_margin_top"/>

            <Button
                android:id="@+id/history_clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/clear_history_button_style"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:text="@string/clear_history"
                android:letterSpacing="@integer/letter_spacing"
                android:backgroundTint="@color/not_found_renew_button_color"
                android:fontFamily="@font/ys_display_medium"
                android:textColor="@color/not_found_renew_button_text_color"
                android:textSize="@dimen/not_found_renew_button_text_size"

                android:visibility="invisible"/>

        </LinearLayout>

        <ProgressBar
            android:layout_width="@dimen/progressbar_size"
            android:layout_height="@dimen/progressbar_size"
            android:layout_marginTop="@dimen/progressbar_margin_top"
            android:layout_gravity="center_horizontal"
            android:indeterminateTint="@color/search_cursor_color"
            android:visibility="visible"
            android:id="@+id/search_progress_bar"/>
    </FrameLayout>

</LinearLayout>