<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/player_background"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.playlist_maker2.lib.ui.PlaylistEditInformationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp4">

        <ImageButton
            style="@style/ArrowBackButtonStyle"
            android:id="@+id/new_playlist_back_button"/>

        <TextView
            style="@style/menu_head_text_style"
            android:text="@string/information_edit_playlist" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="82dp">

        <ImageView
            android:id="@+id/edit_playlist_plus_picture"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="@dimen/dp24"
            android:background="@drawable/dash_frame"
            android:src="@drawable/add_playlist_pic"
            android:padding="106dp"/>

        <ImageView
            android:id="@+id/edit_playlist_picture"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp_0"
            android:scaleType="centerCrop"
            android:clipToOutline="true"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="@dimen/dp24"
            android:background="@drawable/dash_frame"/>

        <EditText
            android:id="@+id/edit_playlist_name"
            android:layout_width="@dimen/dp_0"
            android:layout_height="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_playlist_picture"
            android:layout_marginTop="32dp"
            android:layout_marginHorizontal="@dimen/dp16"
            android:background="@drawable/rounded_edittext2"
            android:hint="@string/playlist_name"
            android:textColorHint="@color/new_playlist_edit_text_color"
            android:textColor="@color/new_playlist_edit_text_color"
            android:paddingStart="@dimen/dp16"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:singleLine="true"
            />

        <TextView
            android:id="@+id/edit_playlist_upper_hint_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/edit_playlist_name"
            app:layout_constraintBottom_toTopOf="@id/edit_playlist_name"
            app:layout_constraintTop_toTopOf="@id/edit_playlist_name"
            android:paddingHorizontal="6dp"
            android:layout_marginLeft="@dimen/dp10"
            android:textColor="@color/new_playlist_button_active_color"
            android:background="@color/menuColor"
            android:text="@string/playlist_name"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/edit_playlist_about"
            android:layout_width="@dimen/dp_0"
            android:layout_height="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_playlist_name"
            android:layout_marginTop="@dimen/dp16"
            android:layout_marginHorizontal="@dimen/dp16"
            android:background="@drawable/rounded_edittext2"
            android:hint="@string/playlist_about"
            android:textColorHint="@color/new_playlist_edit_text_color"
            android:textColor="@color/new_playlist_edit_text_color"
            android:paddingStart="@dimen/dp16"
            android:maxLines="1"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:singleLine="true"/>

        <TextView
            android:id="@+id/edit_playlist_upper_hint_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/edit_playlist_about"
            app:layout_constraintBottom_toTopOf="@id/edit_playlist_about"
            app:layout_constraintTop_toTopOf="@id/edit_playlist_about"
            android:paddingHorizontal="6dp"
            android:layout_marginLeft="@dimen/dp10"
            android:textColor="@color/new_playlist_button_active_color"
            android:background="@color/menuColor"
            android:text="@string/playlist_about"
            android:visibility="gone"/>

        <Button
            android:id="@+id/edit_playlist_save_button"
            style="@style/create_new_playlist_button_style"
            android:layout_width="@dimen/dp_0"
            android:layout_height="@dimen/dp56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="32dp"
            android:layout_marginHorizontal="17dp"
            android:text="@string/information_save_button"
            android:letterSpacing="@integer/letter_spacing"
            android:fontFamily="@font/ys_display_medium"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:enabled="false"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>